# tree-sitter-bifrost

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  eslint.config.mjs  go.mod  grammar.js  grammar.tree  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build-python-package.yml
bindings/c/: tree-sitter-bifrost.h  tree-sitter-bifrost.pc.in  tree-sitter-mimi.pc.in
bindings/c/tree_sitter/: tree-sitter-mimi.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bifrost/: __init__.py  _binding.pyd  binding.c
bindings/python/tree_sitter_mimi/: __init__.py  _binding.pyd  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMimiTests/: TreeSitterMimiTests.swift
bindings/zig/: root.zig
scripts/: generate_flat_index.py
src/: grammar.json  node-types.json  parser.c
tests/: example.bifrost
tests/grammars/: test_basic.bif
ts-build/: Makefile
