[tool.hatch.build.targets.wheel]
packages = ["bindings/python/tree_sitter_bifrost"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tree-sitter-bifrost"
description = "Bifrost grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "bifrost"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Ryan Fong", email = "ryan.lawrence.fong@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/qinbeans/bifrost"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp313-*"
build-frontend = "build"
