[tool.setuptools]
packages = ["tree_sitter_bifrost"]

[tool.setuptools.package-dir]
"" = "bindings/python"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bifrost"
description = "Bifrost grammar for tree-sitter"
version = "0.1.3"
keywords = ["incremental", "parsing", "tree-sitter", "bifrost"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Ryan Fong", email = "ryan.lawrence.fong@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/qinbeans/bifrost"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[dependency-groups]
dev = [
    "cibuildwheel>=2.23.3",
]

[tool.cibuildwheel]
build = "cp313-*"
build-frontend = "build"
